feat: modify CustomAuthenticationSuccessHandler